--- a/app/src/main/res/layout/fragment_third_onboarding.xml
+++ b/app/src/main/res/layout/fragment_third_onboarding.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="420dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:src="@drawable/onboarding_background"
@@ -31,10 +31,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="9dp"
-        android:layout_marginTop="12dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="12dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -43,7 +43,8 @@
             android:text="@string/onboarding_title_3"
             android:textColor="@color/text_color_title"
             android:textSize="42sp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:includeFontPadding="false"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -55,7 +56,8 @@
             android:gravity="center"
             android:layout_marginTop="16dp"
             android:lineSpacingExtra="3sp"
-            android:layout_marginHorizontal="30dp"/>
+            android:layout_marginHorizontal="30dp"
+            android:includeFontPadding="false"/>
 
     </LinearLayout>
 
