--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="text_color_button_onboarding">#333333</color>
     <color name="text_color_button_stroke">#ECECEC</color>
     <color name="text_color_onboarding_description">#9B9B9B</color>
+    <color name="color_background_edittext">#F0F0F0</color>
 </resources>
