--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.OnBoardingFragment"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:weightSum="10">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager_onboarding"
@@ -15,68 +17,78 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="24dp"/>
-
-    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-        android:id="@+id/dots_indicator_onboarding"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:dotsColor="@color/text_color_button_stroke"
-        app:dotsCornerRadius="8dp"
-        app:dotsSize="8dp"
-        app:dotsSpacing="6dp"
-        app:dotsWidthFactor="2.5"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:progressMode="false"
-        android:layout_marginBottom="38dp"
-        app:selectedDotColor="@color/text_color_button_onboarding"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginBottom="24dp"
+        android:layout_weight="8"/>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp">
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button_to_login"
+        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+            android:id="@+id/dots_indicator_onboarding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:dotsColor="@color/text_color_button_stroke"
+            app:dotsCornerRadius="8dp"
+            app:dotsSize="8dp"
+            app:dotsSpacing="6dp"
+            app:dotsWidthFactor="2.5"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:progressMode="false"
+            android:layout_marginBottom="38dp"
+            app:selectedDotColor="@color/text_color_button_onboarding"
+            tools:ignore="MissingConstraints"
+            android:layout_gravity="center"/>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/text_color_button_onboarding"
-            android:fontFamily="@font/mabrypro_medium"
-            android:lineSpacingExtra="4sp"
-            android:paddingVertical="19dp"
-            android:text="@string/login"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:cornerRadius="100dp" />
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="24dp"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_editor_absoluteX="16dp">
 
-        <Button
-            android:id="@+id/button_to_registration"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/mabrypro_medium"
-            android:lineSpacingExtra="4sp"
-            android:paddingVertical="19dp"
-            android:text="@string/registration"
-            android:textColor="@color/text_color_button_onboarding"
-            android:textSize="18sp"
-            app:cornerRadius="100dp"
-            app:strokeColor="@color/text_color_button_stroke"
-            app:strokeWidth="2dp" />
+            <Button
+                android:id="@+id/button_to_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/text_color_button_onboarding"
+                android:fontFamily="@font/mabrypro_medium"
+                android:lineSpacingExtra="4sp"
+                android:paddingVertical="19dp"
+                android:text="@string/login"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:cornerRadius="100dp" />
+
+            <Button
+                android:id="@+id/button_to_registration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/mabrypro_medium"
+                android:lineSpacingExtra="4sp"
+                android:paddingVertical="19dp"
+                android:text="@string/registration"
+                android:textColor="@color/text_color_button_onboarding"
+                android:textSize="18sp"
+                app:cornerRadius="100dp"
+                app:strokeColor="@color/text_color_button_stroke"
+                app:strokeWidth="2dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
