--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.LoginFragment"
-    android:background="@color/white">
+    android:background="@color/color_background">
 
     <ImageView
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
             android:textColor="@color/text_color_title"
             android:textSize="36sp"
             android:includeFontPadding="false"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="40dp"
             />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -136,8 +136,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/registration"
-                android:textColor="@color/main_color"
-                android:fontFamily="@font/mabrypro_medium"
+                android:textColor="@color/black"
+                android:fontFamily="@font/mabrypro_bold"
                 android:textSize="14sp"
                 />
 
@@ -158,7 +158,7 @@
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/main_color"
+            android:backgroundTint="@color/color_block_button"
             android:fontFamily="@font/mabrypro_medium"
             android:paddingVertical="19dp"
             android:text="@string/continue_next"
