--- a/app/src/main/res/layout/fragment_first_onboarding.xml
+++ b/app/src/main/res/layout/fragment_first_onboarding.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FirstOnboardingFragment"
-    android:background="@color/white"
+    android:background="@android:color/transparent"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
