--- a/app/src/main/res/layout/fragment_second_onboarding.xml
+++ b/app/src/main/res/layout/fragment_second_onboarding.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.SecondOnboardingFragment"
-    android:background="@color/white"
+    android:background="@android:color/transparent"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
