--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.LoginFragment"
+    tools:context=".presentation.fragments.LoginFragment"
     android:background="@color/color_background">
 
     <ImageView
@@ -133,6 +133,7 @@
                 />
 
             <TextView
+                android:id="@+id/text_to_registration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/registration"
