--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.RegistrationFragment"
+    tools:context=".presentation.fragments.RegistrationFragment"
     android:background="@color/color_background">
 
     <LinearLayout
@@ -36,6 +36,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginHorizontal="16dp"
             android:gravity="center"
+            android:minHeight="80dp"
             />
 
         <com.google.android.material.textfield.TextInputLayout
