--- a/app/src/main/res/layout/fragment_third_onboarding.xml
+++ b/app/src/main/res/layout/fragment_third_onboarding.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.ThirdOnboardingFragment"
+    tools:context=".presentation.fragments.ThirdOnboardingFragment"
     android:background="@android:color/transparent"
     android:orientation="vertical">
 
