--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="color_background_edittext">#F0F0F0</color>
     <color name="color_background">#F9F9F9</color>
     <color name="color_block_button">#D1D1D1</color>
+    <color name="color_error">#EB5757</color>
 </resources>
