--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,17 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.fragments.LoginFragment"
-    android:background="@color/color_background">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/login_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:scaleType="centerCrop" />
+    android:background="@drawable/image_background_login">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,7 +58,6 @@
                 android:singleLine="true"
                 android:textCursorDrawable="@drawable/cursor_style_edit_text"
                 android:textColor="@color/text_color_edit_text"
-                android:maxLength="12"
                 android:inputType="phone"
                 style="@style/CustomTextInputEditText"
                 />
@@ -99,12 +88,23 @@
                 android:singleLine="true"
                 android:textCursorDrawable="@drawable/cursor_style_edit_text"
                 android:textColor="@color/text_color_edit_text"
-                android:maxLength="12"
                 android:inputType="textPassword"
                 style="@style/CustomTextInputEditText"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/text_error_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_error_login"
+            android:fontFamily="@font/mabrypro_medium"
+            android:textColor="@color/color_error"
+            android:textSize="14sp"
+            android:layout_marginTop="9dp"
+            android:visibility="gone"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -146,28 +146,23 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/button_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/color_block_button"
+        android:fontFamily="@font/mabrypro_medium"
+        android:paddingVertical="19dp"
+        android:text="@string/continue_next"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:cornerRadius="100dp"
+        android:lineSpacingExtra="4sp"
+        android:enabled="false"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/button_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/color_block_button"
-            android:fontFamily="@font/mabrypro_medium"
-            android:paddingVertical="19dp"
-            android:text="@string/continue_next"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:cornerRadius="100dp"
-            android:lineSpacingExtra="4sp" />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
