--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".presentation.activity.MainActivity"
     android:id="@+id/layout_fragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
 </LinearLayout>
