--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="color_error">#EB5757</color>
     <color name="color_icon_not_active">#D9D9D9</color>
     <color name="color_icon_active">#5ACC71</color>
+    <color name="color_phone_profile">#949494</color>
 </resources>
