add sections back

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -31,7 +31,7 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/image_check_yes" />
+                android:src="@drawable/test_photo" />
 
         </LinearLayout>
 
