--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,11 +34,12 @@
             android:layout_marginTop="60dp">
 
             <TextView
+                android:id="@+id/name_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text_color_title"
                 android:fontFamily="@font/mabrypro_bold"
-                android:text="Илья Пономарев"
+                tools:text="Илья Пономарев"
                 android:textSize="22sp"
                 android:layout_marginEnd="8dp"
                 />
@@ -53,11 +54,12 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/phone_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_phone_profile"
             android:fontFamily="@font/mabrypro_regular"
-            android:text="+7 966 701-17-18"
+            tools:text="+7 966 701-17-18"
             android:textSize="14sp"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
