--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -89,7 +89,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/test_photo" />
+            android:src="@drawable/image_base_profile" />
 
     </androidx.cardview.widget.CardView>
 
