--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -27,7 +27,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="8dp"
-                android:src="@drawable/test_photo" />
+                android:src="@drawable/image_base_profile" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
