--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -28,10 +28,58 @@
             android:layout_marginVertical="12dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/test_photo" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="18dp"
+                android:layout_marginEnd="8dp"
+                android:elevation="0dp"
+                android:outlineSpotShadowColor="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/image_base_profile" />
+
+            </androidx.cardview.widget.CardView>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColorHint="@color/text_color_hint"
+                app:counterTextColor="@color/text_color_hint"
+                app:cursorColor="@color/text_color_edit_text"
+                style="@style/CustomTextInputLayout"
+                app:hintEnabled="false"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_text_phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:minHeight="60dp"
+                    android:gravity="center_vertical"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
+                    android:background="@drawable/edit_text_background_navbar"
+                    android:hint="@string/text_hint_map_search"
+                    android:textColorHint="@color/text_color_hint"
+                    android:fontFamily="@font/mabrypro_medium"
+                    android:textSize="15sp"
+                    android:singleLine="true"
+                    android:drawableStart="@drawable/icon_search"
+                    android:drawablePadding="10dp"
+                    android:textCursorDrawable="@drawable/cursor_style_edit_text"
+                    android:textColor="@color/text_color_edit_text"
+                    android:inputType="phone"
+                    style="@style/CustomTextInputEditText"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
