--- a/app/src/main/res/layout/bottom_sheet_ground.xml
+++ b/app/src/main/res/layout/bottom_sheet_ground.xml
@@ -46,86 +46,255 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="24dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_ground_sheet_tilte"
-                    android:fontFamily="@font/mabrypro_medium"
-                    android:text="@string/text_sports_ground"
-                    android:textSize="16sp"
-                    android:includeFontPadding="true"
-                    />
-
-                <TextView
-                    android:id="@+id/name_ground"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_ground_sheet_name"
-                    android:fontFamily="@font/mabrypro_bold"
-                    tools:text="Скейт-парк Ходынское поле"
-                    android:textSize="24sp"
-                    android:layout_marginTop="4dp"
-                    />
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp">
-                    
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/icon_time_ground"
-                        android:layout_marginEnd="8dp"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="24dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_ground_sheet_tilte"
+                        android:fontFamily="@font/mabrypro_medium"
+                        android:text="@string/text_sports_ground"
+                        android:textSize="16sp"
+                        android:includeFontPadding="true"
                         />
 
                     <TextView
-                        android:id="@+id/time_ground"
+                        android:id="@+id/name_ground"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/text_color_title"
+                        android:textColor="@color/color_ground_sheet_name"
                         android:fontFamily="@font/mabrypro_bold"
-                        tools:text="17:00 - 21:00"
-                        android:textSize="14sp"
-                        android:includeFontPadding="false"
-                        android:layout_gravity="center"
+                        tools:text="Скейт-парк Ходынское поле"
+                        android:textSize="24sp"
+                        android:layout_marginTop="4dp"
                         />
-                    
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/icon_time_ground"
+                            android:layout_marginEnd="8dp"
+                            />
+
+                        <TextView
+                            android:id="@+id/time_ground"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/text_color_title"
+                            android:fontFamily="@font/mabrypro_bold"
+                            tools:text="17:00 - 21:00"
+                            android:textSize="14sp"
+                            android:includeFontPadding="false"
+                            android:layout_gravity="center"
+                            />
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_line_profile"
+                        android:layout_marginTop="12dp"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_information_ground"
+                        android:paddingVertical="7dp"
+                        android:paddingHorizontal="12dp"
+                        android:layout_marginTop="14dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:fontFamily="@font/mabrypro_medium"
+                            android:text="@string/text_sports_review"
+                            android:textSize="14sp"
+                            android:includeFontPadding="false"
+                            android:padding="2dp"
+                            />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
-                <ImageView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_line_profile"
-                    android:layout_marginTop="12dp"/>
+                    android:layout_marginTop="13dp"
+                    android:background="@color/color_ground_sheet_bottom">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/background_information_ground"
-                    android:paddingVertical="7dp"
-                    android:paddingHorizontal="12dp"
-                    android:layout_marginTop="14dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:fontFamily="@font/mabrypro_medium"
-                        android:text="@string/text_sports_review"
-                        android:textSize="14sp"
-                        android:includeFontPadding="false"
-                        android:padding="2dp"
-                        />
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="16dp"
+                        android:background="@color/white"
+                        android:elevation="0dp"
+                        app:cardCornerRadius="24dp"
+                        android:outlineSpotShadowColor="@android:color/transparent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_marginHorizontal="16dp"
+                            android:layout_marginVertical="16dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="32dp"
+                                    android:layout_height="32dp"
+                                    android:src="@drawable/icon_information_ground"/>
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_marginStart="14dp">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="@color/color_ground_sheet_name"
+                                        android:fontFamily="@font/mabrypro_bold"
+                                        android:text="@string/text_information"
+                                        android:textSize="18sp"
+                                        />
+
+                                    <TextView
+                                        android:id="@+id/info_ground"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="@color/color_text_ground_sheet"
+                                        android:fontFamily="@font/mabrypro_medium"
+                                        tools:text="Новая спортивная площадка установлена на территории четырнадцатой школы, в местечке Авдотьино в Иванове"
+                                        android:textSize="18sp"
+                                        android:layout_marginTop="4dp"
+                                        />
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/image_line_shhet_ground"
+                                android:layout_marginVertical="10dp"/>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="32dp"
+                                    android:layout_height="32dp"
+                                    android:src="@drawable/icon_place_ground"/>
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_marginStart="14dp">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="@color/color_ground_sheet_name"
+                                        android:fontFamily="@font/mabrypro_bold"
+                                        android:text="@string/text_address"
+                                        android:textSize="18sp"
+                                        />
+
+                                    <TextView
+                                        android:id="@+id/place_ground"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="@color/color_text_ground_sheet"
+                                        android:fontFamily="@font/mabrypro_medium"
+                                        tools:text="г. Москва, ул. Красногвардейский  бульвар, 11, стр. 1"
+                                        android:textSize="18sp"
+                                        android:layout_marginTop="4dp"
+                                        />
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/image_line_shhet_ground"
+                                android:layout_marginVertical="10dp"/>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="32dp"
+                                    android:layout_height="32dp"
+                                    android:src="@drawable/icon_contacts_ground"/>
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_marginStart="14dp">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="@color/color_ground_sheet_name"
+                                        android:fontFamily="@font/mabrypro_bold"
+                                        android:text="@string/text_contacts"
+                                        android:textSize="18sp"
+                                        />
+
+                                    <TextView
+                                        android:id="@+id/contacts_ground"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="@color/color_text_ground_sheet"
+                                        android:fontFamily="@font/mabrypro_medium"
+                                        tools:text="sokolova.sofico@yandex.ru"
+                                        android:textSize="18sp"
+                                        android:layout_marginTop="4dp"
+                                        />
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
             </LinearLayout>
+
 
         </ScrollView>
 
