--- a/app/src/main/res/layout/bottom_sheet_section.xml
+++ b/app/src/main/res/layout/bottom_sheet_section.xml
@@ -19,25 +19,22 @@
             android:scaleType="centerCrop"
             android:src="@drawable/image_onboarding_fourth" />
 
-        <ImageButton
-            android:id="@+id/button_close_ground"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="21dp"
-            android:background="@drawable/icon_close_sheet_menu"/>
+<!--        <ImageButton-->
+<!--            android:id="@+id/button_close_ground"-->
+<!--            android:layout_width="44dp"-->
+<!--            android:layout_height="44dp"-->
+<!--            android:layout_gravity="end"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:layout_marginTop="21dp"-->
+<!--            android:background="@drawable/icon_close_sheet_menu"/>-->
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="32dp"
-        android:elevation="0dp"
-        android:outlineSpotShadowColor="@android:color/transparent"
-        android:layout_marginTop="-50dp"
-        android:background="@color/white">
+        android:background="@drawable/background_section_sheet"
+        android:orientation="vertical">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -190,6 +187,31 @@
                         android:layout_marginTop="12dp"
                         />
 
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:textColor="@color/color_ground_sheet_name"-->
+<!--                        android:fontFamily="@font/mabrypro_bold"-->
+<!--                        tools:text="@string/text_teachers"-->
+<!--                        android:textSize="20sp"-->
+<!--                        android:layout_marginTop="12dp"-->
+<!--                        />-->
+
+                    <Button
+                        android:id="@+id/button_enroll"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/main_color"
+                        android:fontFamily="@font/mabrypro_medium"
+                        android:paddingVertical="12dp"
+                        android:text="@string/text_to_enroll"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        app:cornerRadius="15dp"
+                        android:lineSpacingExtra="4sp"
+                        android:enabled="false"
+                        android:layout_marginTop="16dp"/>
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -197,6 +219,6 @@
 
         </ScrollView>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
