--- a/app/src/main/res/layout/bottom_sheet_ground.xml
+++ b/app/src/main/res/layout/bottom_sheet_ground.xml
@@ -6,38 +6,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="32dp"
-        android:elevation="0dp"
-        android:outlineSpotShadowColor="@android:color/transparent">
+        android:layout_height="wrap_content">
 
-        <ImageView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_onboarding_fourth" />
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="32dp"
+            android:elevation="0dp"
+            android:outlineSpotShadowColor="@android:color/transparent">
 
-        <ImageButton
-            android:id="@+id/button_close_ground"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="21dp"
-            android:background="@drawable/icon_close_sheet_menu"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="190dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_onboarding_fourth" />
 
-    </androidx.cardview.widget.CardView>
+            <!--        <ImageButton-->
+            <!--            android:id="@+id/button_close_ground"-->
+            <!--            android:layout_width="44dp"-->
+            <!--            android:layout_height="44dp"-->
+            <!--            android:layout_gravity="end"-->
+            <!--            android:layout_marginEnd="20dp"-->
+            <!--            android:layout_marginTop="21dp"-->
+            <!--            android:background="@drawable/icon_close_sheet_menu"/>-->
 
-    <androidx.cardview.widget.CardView
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="32dp"
-        android:elevation="0dp"
-        android:outlineSpotShadowColor="@android:color/transparent"
-        android:layout_marginTop="-50dp"
-        android:background="@color/white">
+        android:background="@drawable/background_section_sheet"
+        android:orientation="vertical"
+        android:layout_marginTop="-50dp">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -298,6 +302,6 @@
 
         </ScrollView>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
