--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -83,13 +83,25 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_ground_sheet_name"
+                android:fontFamily="@font/mabrypro_bold"
+                android:text="@string/text_where_go"
+                android:textSize="24sp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="10dp"
+                />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_sections"
@@ -97,6 +109,24 @@
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_recommendation"
                 android:orientation="horizontal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_ground_sheet_name"
+                android:fontFamily="@font/mabrypro_bold"
+                android:text="@string/text_where_participant"
+                android:textSize="24sp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="15dp"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_events"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_events" />
 
         </LinearLayout>
 
