--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -9,9 +9,11 @@
     android:layout_marginHorizontal="10dp">
 
     <ImageView
+        android:id="@+id/image_recommend"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:src="@drawable/test_photo_recommend"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
